# googletest-with-cmake-sample

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc  my_math.cc  my_math.h
test/: CMakeLists.txt  test.cc
